--- a/pages/create.html
+++ b/pages/create.html
@@ -9,22 +9,14 @@
     <meta name="author" content="">
     <meta name="keywords" content="html, css, js, javascript, codo a codo">
 
-    <!-- Título-->
     <title> Home │ Funkoshop </title>
-    
-    <!--Íconos-->
-    <script src="https://kit.fontawesome.com/8ee29917fc.js" crossorigin="anonymous"></script>
-
-    <!-- CSS -->        
+    <script src="https://kit.fontawesome.com/8ee29917fc.js" crossorigin="anonymous"></script>      
     <link rel="stylesheet" href="styles.css">
-    
-    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 </head>
 
 
 <body>
-    <!-- Encabezado -->
     <header>
         <!--Navbar-->
         <nav>
@@ -57,8 +49,7 @@
 
     <!-- Contenido -->
     <main>
-        TRABAJEN DESDE AQUI
-        RECUERDEN NO TOCAR EL NAVBAR / FOOTER
+        <h1>Seccion Create</h1>
     </main>
     <!-- Fin del Contenido -->
 
